--- a/02.1-linear.Rmd
+++ b/02.1-linear.Rmd
@@ -1,4 +1,3 @@
-
 % Macros
 \def\cA{{\cal A}}
 \def\cB{{\cal B}}
@@ -54,7 +53,6 @@
 \def\bY{\mathbf{Y}}
 \def\bZ{\mathbf{Z}}
 
-
 \def\ba{\mathbf{a}}
 \def\bb{\mathbf{b}}
 \def\bc{\mathbf{c}}
@@ -82,14 +80,19 @@
 \def\by{\mathbf{y}}
 \def\bz{\mathbf{z}}
 
+% Bold Symbols
 \def\bzero{\mathbf{0}}
-\def\balpha{\boldsymbol \alpha}
-\def\bbeta{\boldsymbol \beta}
-\def\btheta{\boldsymbol \theta}
-\def\bxi{\boldsymbol \xi}
-\def\bmu{\boldsymbol \mu}
-\def\bepsilon{\boldsymbol \epsilon}
+\def\balpha{\boldsymbol{\alpha}}
+\def\bbeta{\boldsymbol{\beta}}
+\def\btheta{\boldsymbol{\theta}}
+\def\bxi{\boldsymbol{\xi}}
+\def\bmu{\boldsymbol{\mu}}
+\def\bepsilon{\boldsymbol{\epsilon}}
+
+% Matrix and Transpose
 \def\T{\text{T}}
+
+% Mathematical Operations
 \def\Trace{\text{Trace}}
 \def\Cov{\text{Cov}}
 \def\Var{\text{Var}}
