--- a/01.4-linearalgebra.Rmd
+++ b/01.4-linearalgebra.Rmd
@@ -1,4 +1,3 @@
-% Macros
 \def\cA{{\cal A}}
 \def\cB{{\cal B}}
 \def\cC{{\cal C}}
@@ -58,7 +57,7 @@
 \def\bc{\mathbf{c}}
 \def\bd{\mathbf{d}}
 \def\be{\mathbf{e}}
-% conflict \def\bf{\mathbf{f}} 
+<!-- Conflict \def\bf{\mathbf{f}} -->
 \def\bg{\mathbf{g}}
 \def\bh{\mathbf{h}}
 \def\bi{\mathbf{i}}
@@ -80,7 +79,6 @@
 \def\by{\mathbf{y}}
 \def\bz{\mathbf{z}}
 
-% Bold Symbols
 \def\bzero{\mathbf{0}}
 \def\balpha{\boldsymbol{\alpha}}
 \def\bbeta{\boldsymbol{\beta}}
@@ -89,10 +87,7 @@
 \def\bmu{\boldsymbol{\mu}}
 \def\bepsilon{\boldsymbol{\epsilon}}
 
-% Matrix and Transpose
 \def\T{\text{T}}
-
-% Mathematical Operations
 \def\Trace{\text{Trace}}
 \def\Cov{\text{Cov}}
 \def\Var{\text{Var}}
